--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="../imagens/icons8-login-16.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/media-querie.css">
     <title>Login</title>
 </head>
 <body>
@@ -17,8 +19,29 @@
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente, faça login para acessar sua conta</p>
 
-                <form action="login.js" method="post">
-                    
+                <form action="login.js" method="post" autocomplete="on">
+                    <div class="campo">
+                        <label for="ilo">
+                            <span class="material-symbols-outlined">
+                                send
+                                </span>
+                        </label>
+                        <input type="email" name="login" id="ilo" required placeholder="Insira seu email" autocomplete="email" class="campo2">
+                    </div>
+                    <div class="campo">
+                        <label for="ise">
+                            <span class="material-symbols-outlined">
+                                vpn_key
+                                </span>
+                        </label>
+                        <input type="password" name="senha" id="ise" minlength="8" maxlength="15" placeholder="Insira sua senha" required autocomplete="current-password" class="campo2">
+                    </div>
+                    <div>
+                        <input type="submit" value="Entrar" class="bottao">
+                        <a href="#" class="esquesi">Esquesi a Senha<span class="material-symbols-outlined" class="esquesi">
+                            lock
+                            </span></a>
+                    </div>
                 </form>
             </article>
         </section>
